adjust main layout: make header fixed, make cards align left

--- a/src/App.css
+++ b/src/App.css
@@ -9,5 +9,5 @@
 }
 
 .App {
-  text-align: center;
+  /* text-align: center; */
 }
