--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,5 +1,8 @@
 .header {
     /* TODO: Make header fixed. Rename to navbar? */
+    position: fixed;
+    overflow: hidden;
+    top: 0;
     height: 160px;
     width: 100%;
     background-color: white;
